linuxmuster-linbo (2.3.62-0) lmn7; urgency=low

  * fix #123: create_efiboot() fails with NVMe devices.
  * lmn7: mkgrubhostimg.py fix, ip changed to hostname in dhcp's devices.conf.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 06 Jun 2020 12:59:33 +0200

linuxmuster-linbo (2.3.61-0) lmn7; urgency=low

  * lmn7:
    - fix #129: create_cloop und upload_cloop won't work anymore.
    - removed fix #131 "wake-on-lan improvement" (hosts don't wake up anymore with this fix).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 28 May 2020 15:34:30 +0200

linuxmuster-linbo (2.3.60-0) babo62; urgency=low

  * lmn7:
    - merged #131: wake-on-lan improvement & update-linbofs timezone fix.
    - reworked helperfunctions, get_bcaddress.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 27 May 2020 20:55:43 +0200

linuxmuster-linbo (2.3.59-0) babo62; urgency=low

  * lmn7: further modifications and fixes for dynamicip hosts support (#126).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 19 Apr 2020 13:03:55 +0200

linuxmuster-linbo (2.3.58-0) babo62; urgency=low

  * lmn7:
    - fix #126: support for dynamic ip hosts.
    - helperfunctions and rsync xfer scripts improvements.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 14 Apr 2020 17:23:32 +0200

linuxmuster-linbo (2.3.57-0) babo62; urgency=low

  * fork time sync to background.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Feb 2020 10:13:41 +0100

linuxmuster-linbo (2.3.56-0) babo62; urgency=low

  * grub console output fix on operating system boot.
  * fix time sync output.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 03 Feb 2020 18:03:01 +0100

linuxmuster-linbo (2.3.55-0) babo62; urgency=low

  * merged pr #124 from netzint:master
  * lmn7: mkgrubhostimg.py, fixed parsing host variables
  * linbo_cmd: moved rsync ecludes to file /etc/rsync.exclude

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 31 Jan 2020 20:20:06 +0100

linuxmuster-linbo (2.3.54-0) babo62; urgency=low
